samples/_failures_safe/1761661350_6aa5d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fb2fcf2.c: In function ‘main’:
./samples/SAFE/__tmp_2fb2fcf2.c:173:9: error: expected declaration or statement at end of input
  173 |         printf("Invalid input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2fb2fcf2.c:173:9: error: expected declaration or statement at end of input
